fix: review cards aligned

--- a/src/components/Reviews/Reviews.module.scss
+++ b/src/components/Reviews/Reviews.module.scss
@@ -5,6 +5,11 @@
 
     &__wrapper {
         margin: 30px auto 0;
+        display: grid;
+        gap: 14px;
+        grid-template-columns: repeat(auto-fill, minmax(380px, 1fr));
+        -ms-overflow-style: none;
+        scrollbar-width: none;
     }
 
     &__text {
